--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "league/commonmark": "dev-master#824243b41288af5cefd6bb6c5d8df31accc6b265 as 0.7.0"
+        "league/commonmark": "0.7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3",
